--- a/BlazorEcommerce/Client/Shared/ShopNavMenu.razor
+++ b/BlazorEcommerce/Client/Shared/ShopNavMenu.razor
@@ -1,8 +1,7 @@
 ﻿@inject ICategoryService CategoryService
 
-<div class="top-row ps-3 navbar navbar-dark">
+<div class="top-row ps-3 navbar navbar-dark navbar-toggler-wrapper">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">BlazorEcommerce</a>
         <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -10,12 +9,13 @@
 </div>
 
 <div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
-    <nav class="flex-column">
-        <div class="nav-item px-3">
+    <nav class="flex-nav">
+        <div class="nav-item px-2">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
                 Home
             </NavLink>
         </div>
+
         @foreach (var category in CategoryService.Categories)
         {
             <div class="nav-item px-3">
@@ -24,6 +24,7 @@
                 </NavLink>
             </div>
         }
+
     </nav>
 </div>
 
